# fatturapa-mcp-server

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  SPEC.md  docker-compose.yml  pyproject.toml  roots.py  server.py  test_extract.py  test_roots.py  test_validate.py
.claude/: settings.local.json
.github/workflows/: ci.yml  secret-scan.yml
coord/: BOARD.md  DECISIONS.md  HANDOFF_check_piva.md  HANDOFF_ci_github_actions.md  HANDOFF_context_parameter.md  HANDOFF_docker.md  HANDOFF_extract_invoice_data.md  HANDOFF_find_invoice_anomalies.md  HANDOFF_generate_invoice_report.md  HANDOFF_logging_messages.md  HANDOFF_lookup_sdi_error.md  HANDOFF_progress_notifications.md  HANDOFF_readme_bilingual.md  HANDOFF_roots_control.md  HANDOFF_scaffold.md  HANDOFF_validate_invoice.md  HANDOFF_verify_piva_vies.md  STATE.json
src/fatturapa_mcp/: __init__.py  server.py
src/fatturapa_mcp/schemas/: FatturaPA_v1.2.xsd  FatturaPA_v1.3.xsd  README.md
src/fatturapa_mcp/tools/: __init__.py  anomalies.py  check_piva.py  extract.py  report.py  sdi_errors.py  validate.py  vies.py
src/fatturapa_mcp/utils/: __init__.py  logging.py  roots.py
tests/: conftest.py  test_anomalies.py  test_check_piva.py  test_extract.py  test_logging.py  test_report.py  test_roots.py  test_sdi_errors.py  test_validate.py  test_vies.py
tests/fixtures/: invalid.xml  valid_v12.xml  valid_v13.xml
tools/: anomalies.py  extract.py  validate.py
